--- a/templates/Strocks.html
+++ b/templates/Strocks.html
@@ -335,6 +335,7 @@
                         <option value="0">Formerly smoked</option>
                         <option value="1">Never smoked</option>
                         <option value="2">Smokes</option>
+                        <option value="2">Unknown</option>
                     </select>
                 </div>
                 <div>
